--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="nav">
                 <div class="logo">
                     <h1 id="navH1">
-                        <a href=""><img src="/img/icon-white.png" alt="">
-                            "Pomofocus"
+                        <a id="h1logo" href=""><img class="pomoLogo" src="/img/icon-white.png" alt="">
+                            Pomofocus
                         </a>
                     </h1>
                 </div>
                 <div class="navBtn">
-                    <button>
+                    <button id="reportBtn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-file-bar-graph" viewBox="0 0 16 16">
                             <path
@@ -31,7 +31,7 @@
                         </svg>
                         Report
                     </button>
-                    <button>
+                    <button id="settingsBtn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-gear-fill" viewBox="0 0 16 16">
                             <path
@@ -39,7 +39,7 @@
                         </svg>
                         Settings
                     </button>
-                    <button>
+                    <button id="loginBtn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
