--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@
                 </div>
             </div>
             <div class="pomoContainer">
-                <div class="pomoClock">
-                    <div>
-                        <div>
+                <div class="clockContainer">
+                    <div class="clock">
+                        <div class="clockNav">
                             <button>Pomodoro</button>
                             <button>Short Break</button>
                             <button>Long Break</button>
                         </div>
-                        <div>25:00</div>
+                        <div class="clockTimer">25:00</div>
+                        <div class="startBtnContainer">
+                            <button class="startBtn">START</button>
+                        </div>
                     </div>
-                    <div>#1</div>
-                    <div>Time To Focus</div>
                 </div>
+                <div>#1</div>
+                <div>Time To Focus</div>
                 <div class="pomoTask">
                     <div>
                         <div>
