Pomowork: pomo counter pomotext

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         </div>
                     </div>
                 </div>
-                <div>#1</div>
-                <div>Time To Focus</div>
+                <div class="pomoCounter">#1</div>
+                <div class="pomoText">Time To Focus</div>
                 <div class="pomoTask">
                     <div>
                         <div>
