--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="pomoText">Time To Focus</div>
                 <div class="pomoTask">
                     <div>
-                        <div>
+                        <div class="taskContainer">
                             <span>Task</span>
                             <div>
                                 <button class="3Dots">
